More grammar, variable, dictionary,  etc. cleanup